# agent-prompt-scanner

./: .gitignore  V  main.py  pyproject.toml
examples/demo-agent/: system_prompt.txt
src/agent/: __main__.py
src/agent/adapters/: base.py  file_adapter.py
src/agent/cli/: main.py  scan.py
src/agent/core/: file_discovery.py  project_loader.py  prompt_detector.py  rule_engine.py
src/agent/models/: finding.py  prompt.py  report.py  rule.py  severity.py
src/agent/report/: renderer.py
src/agent/rules/: base.py
src/agent/rules/prompt/: pr001.py  pr002.py  registry.py
src/agent/scanner/: base.py  prompt.py  result.py
src/agent_prompt_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
